--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,5 @@
 .our-team{
+	/*background-color: red; /*color detras de los paneles*/
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -7,7 +8,7 @@
 }
 .our-team__title{
 	font-family: 'Pacifico',cursive;
-	color: #de423a;
+	color: #ffffff;
 	font-size: 1.8em;
 	margin-bottom: 10px;
 }
