--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,8 +3,9 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
+    font-family: 'Arial', sans-serif; /*Fuente predeterminada para el textos*//*En Arial antes estaba Montserrat*/
+	background-color:rgb(0, 0, 0); /*color detras de los paneles*/
+    margin: 0; /*tamaño del margen*/
 }
 /*----------------Estilos Base------------------*/
 img{
@@ -20,6 +21,7 @@ h1,h2,h3,h4,h5{
     margin: auto;
 }
 .container--flex{
+	color: #ffffff;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -37,14 +39,14 @@ h1,h2,h3,h4,h5{
 }
 .logo{
     font-size: 1.9em;
-    color: #de423a;
+    color: #fdc62d;
     padding: 10px;
-    font-family: 'Sacramento', cursive;
+    font-family: 'Sacramento', cursive; 
         
 }
 .main-header__contactInfo__phone{
     background:#de423a;
-    color: #fff;
+    color: #ffffff; /*cambiar el color del número*/
     padding: 10px;
     margin: 0;
 }
@@ -68,8 +70,8 @@ h1,h2,h3,h4,h5{
 
 .icon-menu{
     display: block;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #ffffff;
+    border: 1px solid #ffffff;
     border-radius: 3px;
     width: 40px;
     height: 40px;
@@ -87,7 +89,7 @@ h1,h2,h3,h4,h5{
 }
 
 .social-icon [class*="icon-"]{
-    color: black;
+    color: rgb(0, 0, 0);
     margin-left: 10px;
     display: flex;
     justify-content: center;
@@ -95,7 +97,7 @@ h1,h2,h3,h4,h5{
     font-size: 1.3em;
     width: 35px;
     height: 35px;
-    background: #fff;
+    background: #ffffff;
     border-radius: 50%;
 }
 
@@ -110,7 +112,7 @@ h1,h2,h3,h4,h5{
     top: 75px;
     left: 0;
     width: 100%;
-    background: rgba(0,0,0,.85);
+    background: rgba(0, 0, 0, 0.85);
     padding:0px;
     margin:0px;
     z-index: 2000px;
@@ -125,7 +127,7 @@ h1,h2,h3,h4,h5{
 .menu__link{
     display: block;
     padding: 15px;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     text-decoration: none;
     
@@ -151,7 +153,7 @@ h1,h2,h3,h4,h5{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0, 0, 0, 0.7);
     z-index: 1000;
     top: 0;
 }
@@ -162,7 +164,7 @@ h1,h2,h3,h4,h5{
 }
 .banner__content {
     width: 70%;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align:center;
     position: absolute;
     z-index: 1500;
@@ -176,9 +178,10 @@ h1,h2,h3,h4,h5{
 
 /*----------------Estilos Principales------------------*/
 .group--color .container{
-	background-color: #DE423A;
+	background-color: #fdc62d;
 	padding: 10px;
 	text-align: center;
+	color: #000000;
 	
 }
 .main__title{
@@ -199,13 +202,14 @@ h1,h2,h3,h4,h5{
 	text-align: center;
 	text-decoration: none;
 	width: 120px;
-	background: #DE423A;
-	color: #fff;
+	background: #fdc62d; /*contact*/
+	color: #000000;
 	padding:10px;
 	margin: 10px auto;
 	
 }
 .group__title{
+	color: #ffffff;
 	font-family:'Sacramento',cursive;
 	text-align: center;
 	font-weight: bold;
@@ -214,8 +218,10 @@ h1,h2,h3,h4,h5{
 }
 
 .today-special .column {
+	color: #ffffff;
 	margin-bottom: 30px;
 	text-align: center;
+	/*font-family: 'Sacramento',cursive;*/
 }
 
 .today-special__img{
@@ -224,10 +230,10 @@ h1,h2,h3,h4,h5{
 }
 
 .today-special__tittle{
-	
 	font-size: 1.3em;
 	padding-top: 10px;
 	padding-bottom: 20px;
+	/**/
 }
 .today-special__price{
 	font-size: 1.5em;
@@ -238,7 +244,7 @@ h1,h2,h3,h4,h5{
 /*----------------Estilos Principales------------------*/
 .main-footer{
 	background: #222;
-	color: #fff;
+	color: #ffffff;
 	padding: 10px;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -252,7 +258,7 @@ h1,h2,h3,h4,h5{
 }
 
 .main-footer [class*="icon-"] {
-	color: #fff;
+	color: #ffffff;
 	text-decoration: none;
 	
 	
@@ -267,7 +273,7 @@ h1,h2,h3,h4,h5{
 
 @media screen and (min-width:480px){
 	.logo{
-		color: #fff;
+		color: #fdc62d; /*cambiar color del logo "ADreamInGrandLine"*/ 
 		
 	}
 	.main-header__contactInfo{
@@ -281,7 +287,7 @@ h1,h2,h3,h4,h5{
 		background: none;
 	}
 	.main-header__contactInfo__addres{
-		color: #fff;
+		color: #ffffff;
 	}
 	.main_nav{
 		background:rgba(0,0,0,0.85);
@@ -308,7 +314,7 @@ h1,h2,h3,h4,h5{
 		margin: 0;
 	}
 	.today-special .column {
-		border: 5px solid #ddd;
+		border: 5px solid #fdc62d; /*color de los bordes de las iamgenes mas merorables de OP*/
 		padding: 5px;
 	}
 	.today-special__img{
