--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .our-team{
-	/*background-color: red; /*color detras de los paneles*/
+	/*--background-color: red; /*color detras de los paneles--*/
 	text-align: center;
 	margin-bottom: 20px;
 }
